<resources>
    <string name="app_name">Karahana</string>
    <string name="login">Login</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="register">Register</string>
    <string name="sign_up">Sign-up</string>
    <string name="phonenumber">phonenumber</string>
    <string name="phone_number">phone number</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account! sign-up</string>
    <string name="already_have_an_account_login">Already have an account? login</string>
    <string name="logout">logout</string>
    <string name="create_party">create party</string>
    <string name="what_would_you_like_to_do">what would you like to do?</string>
    <string name="join_a_party">join a party</string>
    <string name="party_name">Party Name:</string>
    <string name="january">january</string>
    <string name="_00">00</string>
    <string name="time">Time</string>
    <string name="type">Type</string>
    <string name="enter">ENTER</string>
    <string name="create_a_party">CREATE A PARTY</string>
    <string name="partyname">Party Name</string>
    <string name="date">Date</string>
    <string name="free_text">free text</string>
    <string name="party">Party</string>
    <string name="playlist">Playlist</string>
    <string name="share">Share</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="party_fragment">party_Fragment</string>
    <string name="playlist_fragment">playlist_fragment</string>
    <string name="share_fragment">share_fragment</string>
    <string name="text">text</string>
    <string name="Text">Text</string>
    <string name="artist">Artist</string>
    <string name="todo">TODO</string>
    <string name="addsong">addSong</string>
    <string name="backarrow">backArrow</string>
    <string name="share_your_party_with_friends">Share your party with friends</string>
    <string name="title_activity_drawer">Drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="karahana">KARAHANA</string>
    <string name="title_activity_back_ground_img">BackGroundImg</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>