<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.ShareFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp">

    <ImageView
        android:id="@+id/sFragment_cardViewImg"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:scaleType="fitXY"/>

    <TextView
        android:id="@+id/sFragment_partyName"
        android:layout_alignTop="@+id/sFragment_cardViewImg"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:textSize="28sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:text="@string/party_name"/>



    <RelativeLayout
        android:id="@+id/sFragment_calender"
        android:layout_width="80dp"
        android:layout_height="87dp"
        android:layout_marginTop="25dp"
        android:layout_marginStart="20dp"
        android:layout_below="@+id/sFragment_partyName">

        <ImageView
            android:id="@+id/sFragment_ic_calender"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>


        <TextView
            android:id="@+id/sFragment_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_00"
            android:textColor="@color/black"
            android:layout_centerHorizontal="true"
            android:layout_alignBottom="@+id/sFragment_ic_calender"
            android:layout_marginBottom="-3dp"
            android:textSize="35sp"/>


        <TextView
            android:id="@+id/partyCard_sFragment_month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="january"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_marginTop="22dp"
            android:layout_centerHorizontal="true"/>


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/sFragment_timeAndType"
        android:layout_width="100dp"
        android:layout_height="85dp"
        android:layout_marginTop="25dp"
        android:layout_toEndOf="@id/sFragment_calender"
        android:layout_marginStart="45dp"
        android:layout_below="@+id/sFragment_partyName">

        <TextView
            android:id="@+id/sFragment_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time"
            android:textColor="@color/white"
            android:layout_marginTop="5dp"
            android:textSize="30sp"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:id="@+id/sFragment_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type"
            android:textSize="28sp"
            android:textColor="@color/white"
            android:layout_marginTop="45dp"
            android:layout_centerHorizontal="true"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <Button
            android:id="@+id/sFragment_BTN_share"
            android:layout_width="250dp"
            android:layout_height="70dp"
            android:text="@string/share_your_party_with_friends"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="80dp"/>

    </RelativeLayout>

    </RelativeLayout>
</RelativeLayout>